--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,20 @@ h3 {
   letter-spacing: 4px;
 }
 
+h4 {
+  font-size: 1.3rem;
+  letter-spacing: 2px;
+}
+
+h5 {
+  font-size: 1rem;
+}
+
+h6 {
+  font-size: 0.85rem;
+  font-weight: normal;
+}
+
 button {
   text-align: center;
   border-radius: 10px;
@@ -231,10 +245,36 @@ main {
   border-bottom: dotted 2px var(--accent-color);
 }
 
-.profile-wrapper {
+.bottom-left-section-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 12px;
+}
+
+.work-experience-wrapper > div:nth-child(1) {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.work-experience-wrapper > div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+
+.work-experience-wrapper > div:nth-child(2) div {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.work-experience-wrapper ul {
+  padding-left: 30px;
+}
+
+.work-experience-wrapper li {
+  font-size: 0.9rem;
 }
 
 .cv-document-bottom-right {
