--- a/src/styles/CsvRegionForm.css
+++ b/src/styles/CsvRegionForm.css
@@ -1,11 +1,12 @@
 .detail-category {
   display: flex;
   flex-direction: column;
+
   gap: 20px;
   padding: 15px;
   border: solid 1.5px rgba(0, 166, 255, 0.48);
   border-radius: 10px;
-  box-shadow: 0px 2px 11px -9px rgba(0, 0, 0, 0.86);
+  box-shadow: 0px 2px 9px -15px rgba(0, 0, 0, 0.296);
 }
 
 .detail-category > div:nth-child(1) {
@@ -18,12 +19,15 @@
   border-radius: 10px;
 }
 
+.detail-category > div:nth-child(2) {
+  border-top: 1px solid rgba(0, 0, 0, 0.074);
+  padding-top: 20px;
+}
+
 .personalDetails > div:nth-child(2) {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
-  border-top: 1px solid rgba(0, 0, 0, 0.074);
-  padding-top: 20px;
 }
 
 .detail-category button {
@@ -44,4 +48,11 @@
 
 .detail-category div:nth-child(1) div:nth-child(1) i {
   color: var(--accent-color);
+}
+
+.experience-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
 }
