--- a/src/styles/CsvRegionFormInput.css
+++ b/src/styles/CsvRegionFormInput.css
@@ -1,5 +1,11 @@
-label input {
+label div {
+  display: flex;
+  gap: 10px;
+  align-items: center;
   margin-top: 7px;
+}
+
+label input {
   width: 100%;
   border: solid 1px rgba(0, 0, 0, 0.18);
   border-radius: 5px;
@@ -12,6 +18,12 @@ input:focus {
   border: none;
 }
 
-.jobTitle {
+label button {
+  background: none !important;
+  border: none !important;
+}
+
+.jobTitle,
+.descriptions {
   grid-column: span 2;
 }
