--- a/src/styles/CsvSubInputWrapper.css
+++ b/src/styles/CsvSubInputWrapper.css
@@ -1,40 +1,38 @@
-.detail-category {
+.sub-category {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 15px;
-  border: solid 1.5px rgba(0, 166, 255, 0.48);
+  width: 90%;
+  border: solid 1px rgba(0, 0, 0, 0.18);
   border-radius: 10px;
-  box-shadow: 0px 2px 11px -9px rgba(0, 0, 0, 0.86);
+  background-color: #aebcc62c;
+  align-self: center;
+  padding: 15px;
 }
 
-.detail-category > div:nth-child(1) {
+.sub-category > div:nth-child(1) {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #aebcc62c;
-  border: solid 1px rgba(0, 0, 0, 0.18);
-  padding: 10px;
   border-radius: 10px;
 }
 
-.personalDetails > div:nth-child(2) {
+.sub-category > div:nth-child(2) {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
   border-top: 1px solid rgba(0, 0, 0, 0.074);
-  padding-top: 20px;
+  padding-top: 15px;
 }
 
-.detail-category button {
+.sub-category button {
   border: solid 1px rgba(0, 0, 0, 0.107);
   padding: 5px 10px;
   border-radius: 10px;
-  background-color: rgba(154, 255, 154, 0.532);
+  background-color: rgba(126, 209, 126, 0.532);
   font-size: 0.8rem;
 }
-
-.detail-category > div:nth-child(1) > div {
+.sub-category > div:nth-child(1) > div {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -42,6 +40,17 @@
   gap: 15px;
 }
 
-.detail-category div:nth-child(1) div:nth-child(1) i {
+.sub-category div:nth-child(1) div:nth-child(1) i {
   color: var(--accent-color);
+}
+
+.add-description-button-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.add-description-button-wrapper button {
+  width: 80%;
+  background-color: #7294bd;
+  color: white;
 }
